--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8"/>
+    <meta name="qwant-site-id" content="$2y$10$CaBYhP7goKsrGbjXEio1POyfwYryvuuATAPeH8liOzmJ6FQHp0u6i" />
     <title>Titre de ma page</title>
     <meta name="description" content="description de ma page pour les moteurs de recherche"/>
     <link href"link" href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
