--- a/index.html
+++ b/index.html
@@ -3,14 +3,37 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="qwant-site-id" content="$2y$10$CaBYhP7goKsrGbjXEio1POyfwYryvuuATAPeH8liOzmJ6FQHp0u6i" />
-    <title>Titre de ma page</title>
-    <meta name="description" content="description de ma page pour les moteurs de recherche"/>
+    <title>Les astuces à connaître pour le concour Qwanturank</title>
+    <meta name="description" content="Decouvrez les meilleurs astuces pour être bien classé dans le concour SEO Qwanturank"/>
     <link href"link" href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
+    <header>
+
+      <!-- PROJET HETIC, GROUPE ANTHONY ET GAETAN -->
+
+      <nav>
+        <div class="menu">
+          <div class="options">
+            <h2 class="item">Qwant, qu'est-ce que c'est ?</h2>
+            <h2 class="item">Le SEO</h2>
+            <h2 class="item">Devenir référenceur</h2>
+          </div>
+        </div>
+      </nav>
+
+    </header>
+    <main>
+      <h1 class="mainTitle">Qwanturank</h1>
+      <p class="description">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+
+       <div class="infoPresentation">
+         <p class="txtImage">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+         <img class="firstImage" src="images/Qwant.jpg" alt="qwanturankImagePrésentation">
+       </div>
+    </main>
   </body>
 </html>
