--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
       <nav>
         <div class="menu">
+          <a href="#"></a>
+          <a href="#"></a>
+          <a href="#"></a>
+          <a href="#"></a>
+          <h1 class="logo">Qwanturank Astuces</h2>
           <div class="options">
             <h2 class="item">Qwant, qu'est-ce que c'est ?</h2>
             <h2 class="item">Le SEO</h2>
