--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="qwant-site-id" content="$2y$10$CaBYhP7goKsrGbjXEio1POyfwYryvuuATAPeH8liOzmJ6FQHp0u6i" />
-    <title>Les astuces à connaître pour le concour Qwanturank</title>
+    <title>Qwanturank: Les astuces à connaître pour le concour de SEO</title>
     <meta name="description" content="Decouvrez les meilleurs astuces pour être bien classé dans le concour SEO Qwanturank"/>
     <link href"link" href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
@@ -32,12 +33,16 @@
     <main>
       <h1 class="mainTitle">Qwanturank</h1>
       <p class="description">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Qwanturank est un concours de SEO (Search Engine Optimization) ou référencement naturel. Le but du jeu ? Developper un site internet et le classer le plus haut possible dans les résultats du moteur de recherche Qwant. Le gagnant empoche 25 000€ </br> Decouvrez les meilleurs astuces pour être visible, améliorer le référencement pour améliorer la visibilté de votre site web, et ce, sans passer par une agence de référencement naturel !
       </p>
 
+      <h2 class="sub">Qwanturank: Se placer tout en haut,</br>Augmenter le taux de clique</h2>
        <div class="infoPresentation">
          <p class="txtImage">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
          <img class="firstImage" src="images/Qwant.jpg" alt="qwanturankImagePrésentation">
+       </div>
+       <div class="blackP">
+         <p class="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
        </div>
     </main>
   </body>
