--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <main>
       <h1 class="mainTitle">Qwanturank</h1>
       <p class="description">
-        Qwanturank est un concours de SEO (Search Engine Optimization) ou référencement naturel. Le but du jeu ? Developper un site internet et le classer le plus haut possible dans les résultats du moteur de recherche Qwant. Le gagnant empoche 25 000€ </br> Decouvrez les meilleurs astuces pour être visible, améliorer le référencement pour améliorer la visibilté de votre site web, et ce, sans passer par une agence de référencement naturel !
+        Qwanturank est un concours de SEO (Search Engine Optimization) ou référencement naturel. </br>Le but du jeu ? Developper un site internet et le classer le plus haut possible dans les résultats</br> du moteur de recherche Qwant. Le gagnant empoche 25 000€ </br> Decouvrez les meilleurs astuces pour être visible, améliorer le référencement pour améliorer la visibilté de votre site web, et ce, sans passer par une agence de référencement naturel !
       </p>
 
       <h2 class="sub">Qwanturank: Se placer tout en haut,</br>Augmenter le taux de clique</h2>
