--- a/index.html
+++ b/index.html
@@ -10,30 +10,40 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
+
+
+
     <header>
 
       <!-- PROJET HETIC, GROUPE ANTHONY ET GAETAN -->
 
       <nav>
         <div class="menu">
-          <a href="#"></a>
-          <a href="#"></a>
-          <a href="#"></a>
-          <a href="#"></a>
-          <h1 class="logo">Qwanturank Astuces</h2>
+          <a href="index.html"><h1 class="logo">Qwanturank Astuces</h1></a>
           <div class="options">
-            <h2 class="item">Qwant, qu'est-ce que c'est ?</h2>
-            <h2 class="item">Le SEO</h2>
-            <h2 class="item">Devenir référenceur</h2>
+
+            <a class="itemLink" href="pages/qwanturank_page_qwant.html">
+              <h2 class="item">Qwant, qu'est-ce que c'est ?</h2>
+            </a>
+            <a class="itemLink" href="pages/qwanturank_page_seo.html">
+              <h2 class="item">Le SEO</h2>
+            </a>
+            <a class="itemLink" href="pages/qwanturank_page_referenceur.html">
+              <h2 class="item">Devenir référenceur</h2>
+            </a>
+
           </div>
         </div>
       </nav>
 
     </header>
+
+
+
     <main>
       <h1 class="mainTitle">Qwanturank</h1>
       <p class="description">
-        Qwanturank est un concours de SEO (Search Engine Optimization) ou référencement naturel. </br>Le but du jeu ? Developper un site internet et le classer le plus haut possible dans les résultats</br> du moteur de recherche Qwant. Le gagnant empoche 25 000€ </br> Decouvrez les meilleurs astuces pour être visible, améliorer le référencement pour améliorer la visibilté de votre site web, et ce, sans passer par une agence de référencement naturel !
+        Qwanturank est un concours de SEO (Search Engine Optimization) ou référencement naturel. </br>Le but du jeu ? Developper un site internet et le classer le plus haut possible dans les résultats</br> du moteur de recherche Qwant. Le gagnant empoche 25 000€. </br> Decouvrez les meilleurs astuces pour être visible, améliorer le référencement pour améliorer la visibilté de votre site web, et ce, sans passer par une agence de référencement naturel !
       </p>
 
       <h2 class="sub">Qwanturank: Se placer tout en haut,</br>Augmenter le taux de clique</h2>
@@ -45,5 +55,10 @@
          <p class="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
        </div>
     </main>
+
+
+    <footer>
+
+    </footer>
   </body>
 </html>
