add qwanturank-astuces.fr CNAME

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="qwant-site-id" content="$2y$10$CaBYhP7goKsrGbjXEio1POyfwYryvuuATAPeH8liOzmJ6FQHp0u6i" />
     <title>Qwanturank: Les astuces à connaître pour le concour de SEO</title>
     <meta name="description" content="Decouvrez les meilleurs astuces pour être bien classé dans le concour SEO Qwanturank"/>
+    <meta name="qwant-site-id" content="$2y$10$CaBYhP7goKsrGbjXEio1POyfwYryvuuATAPeH8liOzmJ6FQHp0u6i" />
     <link href"link" href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
