add meta qwanturank

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8"/>
-    <meta name="qwant-site-id" content="$2y$10$CaBYhP7goKsrGbjXEio1POyfwYryvuuATAPeH8liOzmJ6FQHp0u6i" />
+    <meta name="qwant-site-id" content="$2y$10$VufSvYnW2JsnNe7JRs/zcudu.p0D2JVp4QXFDZLt45gnncznaClRu" />
     <title>Qwanturank: Les astuces à connaître pour le concour de SEO</title>
     <meta name="description" content="Decouvrez les meilleurs astuces pour être bien classé dans le concour SEO Qwanturank"/>
-    <meta name="qwant-site-id" content="$2y$10$CaBYhP7goKsrGbjXEio1POyfwYryvuuATAPeH8liOzmJ6FQHp0u6i" />
     <link href"link" href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
