--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 
       <h2 class="sub">Qwanturank: Se placer tout en haut,</br>Augmenter le taux de clique</h2>
        <div class="infoPresentation">
-         <p class="txtImage">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+         <p class="txtImage">Pour augmenter le taux de clique sur votre site, vous devez mettre en place du contenu SEO. Nous allons vous faire un guide SEO sur cette page, de façon a bien classer votre site web en augmentant le trafic. </p>
          <img class="firstImage" src="images/Qwant.jpg" alt="qwanturankImagePrésentation">
        </div>
+
        <div class="titleLink">
          <h2>Voici differents exemples de sites Qwanturank</h2>
        </div>
-
        <div class="blackP">
          <p class="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
        </div>
