--- a/pages/qwanturank_page_seo.html
+++ b/pages/qwanturank_page_seo.html
@@ -44,6 +44,7 @@
       <h1 class="mainTitle">Tout savoir sur le SEO</h1>
       <p class="description">
         Qwanturank est un concours de SEO (Search Engine Optimization) ou référencement naturel. </br>Le but du jeu ? Developper un site internet et le classer le plus haut possible dans les résultats</br> du moteur de recherche Qwant. Le gagnant empoche 25 000€. </br> Decouvrez les meilleurs astuces pour être visible, améliorer le référencement pour améliorer la visibilté de votre site web, et ce, sans passer par une agence de référencement naturel !
+        Le SEO sert a refférencer son site web gratuitement.
       </p>
 
 
