--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         Qwanturank est un concours de SEO (Search Engine Optimization) ou référencement naturel. </br>Le but du jeu ? Developper un site internet et le classer le plus haut possible dans les résultats</br> du moteur de recherche Qwant. Le gagnant empoche 25 000€. </br> Decouvrez les meilleurs astuces pour être visible, améliorer le référencement pour améliorer la visibilté de votre site web, et ce, sans passer par une agence de référencement naturel !
       </p>
 
-      <h2 class="sub">Qwanturank: Se placer tout en haut,</br>Augmenter le taux de clique</h2>
+      <h2 class="sub"><span>Comment</span> se placer tout en haut,</br>et augmenter le taux de clique pour Qwanturank ?</h2>
        <div class="infoPresentation">
          <p class="txtImage">Pour augmenter le taux de clique sur votre site, vous devez mettre en place du contenu SEO. Nous allons vous faire un guide SEO sur cette page, de façon a bien classer votre site web en augmentant le trafic. </p>
          <img class="firstImage" src="images/Qwant.jpg" alt="qwanturankImagePrésentation">
