--- a/index.html
+++ b/index.html
@@ -48,11 +48,38 @@
 
       <h2 class="sub">Qwanturank: Se placer tout en haut,</br>Augmenter le taux de clique</h2>
        <div class="infoPresentation">
-         <p class="txtImage">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+         <p class="txtImage">Le 2 Décembre 2019, le moteur de recherche Qwant a lancé son propre concours de référencement nommé : Qwanturank. Le but étant de placer son site web dans le top des recherches avec le mot clé "Qwanturank", les 5 premiers pourront alors se partager la somme de 50000€ ! L'intérêt pour le moteur de recherche français est de tester la fiabilité des méthodes anti-spam de Qwant.</p>
          <img class="firstImage" src="images/Qwant.jpg" alt="qwanturankImagePrésentation">
        </div>
        <div class="blackP">
-         <p class="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p class="p2">
+           <h2 class="top_website">Le top des sites Qwanturank</h2>
+             <div class="links">
+               <h3 class="left"><a href=https://www.qwanturank.ovh/>https://www.qwanturank.ovh</a></h3><br>
+               <h3 class="left"><a href=https://www.abondance.com/20200103-41684-concours-qwanturank-premiers-tests-premieres-analyses.html>https://www.abondance.com</a><h3><br>
+               <h3 class="left"><a href=http://www.spoutnik1.com/>http://www.spoutnik1.com</a><h3><br>
+               <h3 class="left"><a href=http://www.geeksource.fr/>http://www.geeksource.fr</a><h3><br>
+               <h3 class="left"><a href=http://www.repandre.com/Est-ce-que-le-mode-incognito-de,50258.html>http://www.repandre.com.html</a><h3><br>
+               <h3 class="left"><a href=http://qwanturank-seo.com/qwanturank>http://qwanturank-seo.com</a><h3><br>
+               <h3 class="left"><a href=http://www.ubuntu-974.fr/>http://www.ubuntu-974.fr</a><h3><br>
+               <h3 class="left"><a href=https://www.qwantseo.com/>https://www.qwantseo.com</a><h3><br>
+               <h3 class="left"><a href=https://qwanturank-le-concours.com/jeu/>https://qwanturank-le-concours.com/jeu</a><h3><br>
+               <h3 class="left"><a href=https://qwanturank-le-concours.com/mieux-ranker.php>https://qwanturank-le-concours.com/mieux-ranker.php</a><h3><br>
+               <h3 class="left"><a href=http://qwanturank.me/>http://qwanturank.me</a><h3><br>
+               <h3 class="right"><a href=https://qwanturank-le-concours.com/>https://qwanturank-le-concours.com</a><h3><br>
+               <h3 class="right"><a href=http://qwanturank-seo.com/qwanturank-en-mode-incognito.html>http://qwanturank-seo.com</a><h3><br>
+               <h3 class="right"><a href=https://www.agenceqwanturank.fr/>https://www.agenceqwanturank.fr</a><h3><br>
+               <h3 class="right"><a href=https://www.qwanturank.ovh/comment-ranker-sur-qwant>https://www.qwanturank.ovh</a><h3><br>
+               <h3 class="right"><a href=http://www.assojeunes-rennes.org/>http://www.assojeunes-rennes.org</a><h3><br>
+               <h3 class="right"><a href=https://www.qwanturank-likeaboss.com/>https://www.qwanturank-likeaboss.com</a><h3><br>
+               <h3 class="right"><a href=http://www.thugeek.com/web/qwanturank/>http://www.thugeek.com</a><h3><br>
+               <h3 class="right"><a href=https://www.qwanturank.one/>https://www.qwanturank.one</a><h3><br>
+               <h3 class="right"><a href=https://www.qwanturank.ovh/actualites/>https://www.qwanturank.ovh/actualites</a><h3><br>
+               <h3 class="right"><a href=https://qwanturank-01.fr/>https://qwanturank-01.fr</a><h3><br>
+               <h3 class="right"><a href=http://www.soho1.info/>http://www.soho1.info</a><h3><br>
+               <h3 class="right"><a href=https://www.one-day.fr/concours-qwanturank/>https://www.one-day.fr/concours-qwanturank</a><h3><br>
+             </div>
+         </p>
        </div>
     </main>
 
