--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Decouvrez les meilleurs astuces pour être bien classé dans le concour SEO Qwanturank"/>
     <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
   </head>
   <body>
 
